{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 342,
  "lineage": "30af02c9-ca70-9630-c6bf-10c178c1f91a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:internet-gateway/igw-0c06e27cc931e22ce",
            "id": "igw-0c06e27cc931e22ce",
            "owner_id": "900131238574",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c06e27cc931e22ce",
            "id": "r-rtb-0ff1a838371415d711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff1a838371415d71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:route-table/rtb-05f772e1cf6df0865",
            "id": "rtb-05f772e1cf6df0865",
            "owner_id": "900131238574",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Vault private"
            },
            "tags_all": {
              "Name": "Vault private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:route-table/rtb-0ff1a838371415d71",
            "id": "rtb-0ff1a838371415d71",
            "owner_id": "900131238574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c06e27cc931e22ce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Vault public"
            },
            "tags_all": {
              "Name": "Vault public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c585f0378d33574",
            "route_table_id": "rtb-05f772e1cf6df0865",
            "subnet_id": "subnet-0f00264491f8c44dc"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0def4386e85ce7d86",
            "route_table_id": "rtb-05f772e1cf6df0865",
            "subnet_id": "subnet-0b0be3446a84a0030"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c7d15020bc281be",
            "route_table_id": "rtb-05f772e1cf6df0865",
            "subnet_id": "subnet-00afe9535c963aa87"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0324b4e5c6d2b6938",
            "route_table_id": "rtb-05f772e1cf6df0865",
            "subnet_id": "subnet-0deee76625a66b6b5"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094206231d2e0fe0c",
            "route_table_id": "rtb-05f772e1cf6df0865",
            "subnet_id": "subnet-010081012ec441c02"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0038b0839c94b6833",
            "route_table_id": "rtb-0ff1a838371415d71",
            "subnet_id": "subnet-0e6dfdf43c3ede396"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0367af5c0dc950e38",
            "route_table_id": "rtb-0ff1a838371415d71",
            "subnet_id": "subnet-021f68582d6139fec"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c94ab0ca13f33f8",
            "route_table_id": "rtb-0ff1a838371415d71",
            "subnet_id": "subnet-00d9de8c3cf7e0119"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7afb9478bac6e31",
            "route_table_id": "rtb-0ff1a838371415d71",
            "subnet_id": "subnet-04432c0fdc079f5d4"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ead35b28077e44dc",
            "route_table_id": "rtb-0ff1a838371415d71",
            "subnet_id": "subnet-04c734ecf7e214f2c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:subnet/subnet-0f00264491f8c44dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f00264491f8c44dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:subnet/subnet-0b0be3446a84a0030",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0be3446a84a0030",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:subnet/subnet-00afe9535c963aa87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00afe9535c963aa87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:subnet/subnet-0deee76625a66b6b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.67.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0deee76625a66b6b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:subnet/subnet-010081012ec441c02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.68.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010081012ec441c02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:subnet/subnet-0e6dfdf43c3ede396",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6dfdf43c3ede396",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:subnet/subnet-021f68582d6139fec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021f68582d6139fec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:subnet/subnet-00d9de8c3cf7e0119",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d9de8c3cf7e0119",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:subnet/subnet-04432c0fdc079f5d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04432c0fdc079f5d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:subnet/subnet-04c734ecf7e214f2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c734ecf7e214f2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0e389b0cddf1f742f"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900131238574:vpc/vpc-0e389b0cddf1f742f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054fa3b6933690e59",
            "default_route_table_id": "rtb-05e7b3427d79f70c3",
            "default_security_group_id": "sg-07225d2678fb67ac8",
            "dhcp_options_id": "dopt-0c8d3651efe31599a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e389b0cddf1f742f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e7b3427d79f70c3",
            "owner_id": "900131238574",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            }
          }
        }
      ]
    }
  ]
}